# project

./: README.md
MyAIDLClient/: settings.gradle
MyAIDLClient/app/: build.gradle
MyAIDLClient/gradle/wrapper/: gradle-wrapper.properties
MyAIDLServer/: settings.gradle
MyAIDLServer/app/: build.gradle
MyAIDLServer/gradle/wrapper/: gradle-wrapper.properties
MyBroadcast/app/: build.gradle
MyBroadcast/gradle/wrapper/: gradle-wrapper.properties
MyConcurrent/: settings.gradle
MyConcurrent/app/: build.gradle
MyConcurrent/concurrent/: build.gradle
MyConcurrent/gradle/wrapper/: gradle-wrapper.properties
MyCrossCompile/: settings.gradle
MyCrossCompile/app/: build.gradle
MyCrossCompile/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
MyCrossCompile/gradle/wrapper/: gradle-wrapper.properties
MyDataStorage/: settings.gradle
MyDataStorage/app/: build.gradle
MyDataStorage/gradle/wrapper/: gradle-wrapper.properties
MyProxy/: settings.gradle
MyProxy/app/: build.gradle
MyProxy/gradle/wrapper/: gradle-wrapper.properties
MyProxy/lib/: build.gradle
MyRecyclerView/app/: build.gradle
MyRecyclerView/gradle/wrapper/: gradle-wrapper.properties
MySocket/: settings.gradle
MySocket/app/: build.gradle
MySocket/gradle/wrapper/: gradle-wrapper.properties
MyThreadLocal/: settings.gradle
MyThreadLocal/app/: build.gradle
activity_dump_proto/: readmiK30_activitydump.proto
clone/: clone.c  clone_1  test_clone2.c
vibrator/: Android.bp
window-13demo/: 13-launcher.txt  13多屏头条+百度.txt  13头条悬浮在百度上.txt  13最大业务.txt  13桌面-贴图.txt  13百度-设置.txt
(+124 files in other folders)
